deploy/components/ingress/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ga-ingress
  labels:
    app.kubernetes.io/part-of: ga-disclosure
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
